import React from 'react';
import { render, act } from '@testing-library/react';
import { describe, it, expect, vi } from 'vitest';
import JoditEditor from '../src';
import type { IJodit } from 'jodit/esm/types/jodit';

function stabilizeFragment(fragment: DocumentFragment): DocumentFragment {
	const clone = fragment.cloneNode(true) as DocumentFragment;
	clone
		.querySelectorAll('[name^="jodit-toolbar-focus-helper_"]')
		.forEach(el => {
			el.setAttribute('name', 'jodit-toolbar-focus-helper_[id]');
		});
	return clone;
}

describe('Smoke Test', () => {
	it('should render without crashing', async () => {
		const { asFragment, findByText } = render(
			<JoditEditor value={'<p>Hello, world!</p>'} />
		);
		await act(async () => {});
		const element = await findByText('Hello, world!');
		expect(element).toBeTruthy();
		expect(stabilizeFragment(asFragment())).toMatchSnapshot();
	});

	describe('Config', () => {
		it('should render without crashing', async () => {
			let editor: IJodit | null = null;

			const config = {
				readonly: true,
				sourceEditor: 'ace',
				disabled: true
			};

			const { asFragment, findByText } = render(
				<JoditEditor
					value={'<p>Hello, world!</p>'}
					config={config}
					editorRef={instance => {
						editor = instance;
					}}
				/>
			);

			await vi.waitFor(() => {
				expect(editor).toBeTruthy();
			});

			await editor!.waitForReady();
			const element = await findByText('Hello, world!');
			expect(element).toBeTruthy();
			expect(stabilizeFragment(asFragment())).toMatchSnapshot();
		});
	});
});
