// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Smoke Test > Config > should render without crashing 1`] = `
<DocumentFragment>
  <div
    class="jodit-react-container"
  >
    <div
      class="jodit-container jodit jodit_theme_default jodit-wysiwyg_mode jodit_disabled"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; --jd-jodit-workplace-height: auto; width: auto;"
    >
      <div
        class="jodit-jodit__workplace-slot_above_true"
        contenteditable="false"
        data-jodit-above-toolbar=""
      />
      <div
        class="jodit-toolbar__box"
      >
        <div
          class="jodit-toolbar-editor-collection jodit-toolbar-editor-collection_mode_horizontal jodit-toolbar-editor-collection_size_middle"
          role="toolbar"
        >
          <input
            disabled="true"
            name="jodit-toolbar-focus-helper_[id]"
            style="width: 0; height:0; position: absolute; visibility: hidden;"
            tab-index="-1"
          />
          <div
            class="jodit-ui-group jodit-ui-group_line_true jodit-ui-group_size_middle"
            role="group"
          >
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_font-style jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Bold"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_bold jodit-ui-group__bold"
                data-ref="bold"
                disabled="disabled"
                ref="bold"
                role="listitem"
              >
                <button
                  aria-label="Bold"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_bold jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.75"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M6 4h7a4 4 0 0 1 0 8H6V4Zm0 8h8a4 4 0 0 1 0 8H6v-8Z"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Italic"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_italic jodit-ui-group__italic"
                data-ref="italic"
                disabled="disabled"
                ref="italic"
                role="listitem"
              >
                <button
                  aria-label="Italic"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_italic jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M10 4h9M5 20h9M15 4 9 20"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Underline"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_underline jodit-ui-group__underline"
                data-ref="underline"
                disabled="disabled"
                ref="underline"
                role="listitem"
              >
                <button
                  aria-label="Underline"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_underline jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M6 3v8a6 6 0 0 0 12 0V3M4 21h16"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Strike through"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_strikethrough jodit-ui-group__strikethrough"
                data-ref="strikethrough"
                disabled="disabled"
                ref="strikethrough"
                role="listitem"
              >
                <button
                  aria-label="Strike through"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_strikethrough jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M17 6c-1-1.5-2.5-2-5-2-3 0-5 1.5-5 4 0 1.8 1.5 3 5 4s5 2.2 5 4c0 2.5-2 4-5 4-2.5 0-4-.5-5-2M3 12h18"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Clear Formatting"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_eraser jodit-ui-group__eraser"
                data-ref="eraser"
                disabled="disabled"
                ref="eraser"
                role="listitem"
              >
                <button
                  aria-label="Clear Formatting"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_eraser jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="m4 12 10-9 7 7-10 10H7l-4-4a3 3 0 0 1 1-4Zm3-3 8 7m-4 4h10"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
            </div>
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_list jodit-ui-group_before-spacer_true jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Insert Unordered List"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_ul jodit-toolbar-button_with-trigger_true jodit-ui-group__ul"
                data-ref="ul"
                disabled="disabled"
                ref="ul"
                role="listitem"
              >
                <button
                  aria-label="Insert Unordered List"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_ul jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M9.3333 5.3333h12M9.3333 12h12M9.3333 18.6667h12"
                          stroke-linecap="butt"
                          stroke-width="2.6667"
                        />
                        <path
                          d="M4 5.3333h0M4 12h0M4 18.6667h0"
                          stroke-width="3.2"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Insert Unordered List"
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Insert Ordered List"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_ol jodit-toolbar-button_with-trigger_true jodit-ui-group__ol"
                data-ref="ol"
                disabled="disabled"
                ref="ol"
                role="listitem"
              >
                <button
                  aria-label="Insert Ordered List"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_ol jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M10.6667 6.6667h10.6666M10.6667 17.3333h10.6666"
                          stroke-linecap="butt"
                          stroke-width="2.6667"
                        />
                        <path
                          d="m2.5 5 2.5-2v7M2.5 10h5M2.5 16a2.5 2.5 0 0 1 5 0c0 1.5-1.5 2.5-5 5h5"
                          stroke-width="2"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Insert Ordered List"
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-spacer"
            />
            <div
              class="jodit-ui-group jodit-ui-group_size_middle"
              role="list"
            />
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_font jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Font family"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_font jodit-toolbar-button_with-trigger_true jodit-ui-group__font"
                data-ref="font"
                disabled="disabled"
                ref="font"
                role="listitem"
              >
                <button
                  aria-label="Font family"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_font jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="m5 17 7-14 7 14M8 12h8M3 21h18"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Font family"
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Font size"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_fontsize jodit-toolbar-button_with-trigger_true jodit-ui-group__fontsize"
                data-ref="fontsize"
                disabled="disabled"
                ref="fontsize"
                role="listitem"
              >
                <button
                  aria-label="Font size"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_fontsize jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M2 5h9M6.5 5v15M4 20h5M19 4v16m-3-13 3-3 3 3m-6 10 3 3 3-3"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Font size"
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Insert format block"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_paragraph jodit-toolbar-button_with-trigger_true jodit-ui-group__paragraph"
                data-ref="paragraph"
                disabled="disabled"
                ref="paragraph"
                role="listitem"
              >
                <button
                  aria-label="Insert format block"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_paragraph jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M20 4H9a5 5 0 0 0 0 10h3M12 4v17M18 4v17"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Insert format block"
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Line height"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_lineHeight jodit-toolbar-button_with-trigger_true jodit-ui-group__lineHeight"
                data-ref="lineHeight"
                disabled="disabled"
                ref="lineHeight"
                role="listitem"
              >
                <button
                  aria-label="Line height"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_lineHeight jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M2.6667 5.3333h9.3333M2.6667 12H12M2.6667 18.6667h9.3333"
                          stroke-linecap="butt"
                          stroke-width="2.6667"
                        />
                        <path
                          d="M18 4v16m-3-13 3-3 3 3m-6 10 3 3 3-3"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Line height"
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_color jodit-ui-group_before-spacer_true jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Fill color or set the text color"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_brush jodit-toolbar-button_with-trigger_true jodit-ui-group__brush"
                data-ref="brush"
                disabled="disabled"
                ref="brush"
                role="listitem"
              >
                <button
                  aria-label="Fill color or set the text color"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_brush jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M12 3c-2 3.2-5.5 7-5.5 10a5.5 5.5 0 0 0 11 0c0-3-3.5-6.8-5.5-10Z"
                        />
                         
                      </g>
                       
                      <rect
                        fill="inherit"
                        height="2"
                        rx="1"
                        stroke="none"
                        width="14"
                        x="5"
                        y="21"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Fill color or set the text color"
                  class="jodit-toolbar-button__trigger"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-spacer"
            />
            <div
              class="jodit-ui-group jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Show all"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_dots jodit-ui-group__dots"
                data-ref="dots"
                disabled="disabled"
                ref="dots"
                role="listitem"
              >
                <button
                  aria-label="Show all"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  disabled="disabled"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_dots jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <circle
                          cx="12"
                          cy="5"
                          r="1"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="1"
                        />
                        <circle
                          cx="12"
                          cy="19"
                          r="1"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit-jodit__workplace-slot_top_true"
        contenteditable="false"
      />
      <div
        class="jodit-jodit__workplace-slot_center_true"
        contenteditable="false"
        style="min-height: 198px;"
      >
        <div
          class="jodit-jodit__workplace-slot_left_true"
          contenteditable="false"
        />
        <div
          class="jodit-workplace"
          contenteditable="false"
          style="min-height: 198px; height: auto;"
          tabindex="-1"
        >
          <div
            aria-disabled="true"
            class="jodit-wysiwyg"
            spellcheck="false"
            style="min-height: 198px;"
            tabindex="-1"
          >
            <p>
              Hello, world!
            </p>
          </div>
          <div
            class="jodit-source"
          >
            <textarea
              class="jodit-source__mirror"
              readonly="true"
              style="height: 0px; min-height: 198px;"
            />
          </div>
        </div>
        <div
          class="jodit-jodit__workplace-slot_right_true"
          contenteditable="false"
        />
      </div>
      <div
        class="jodit-jodit__workplace-slot_bottom_true"
        contenteditable="false"
      />
      <div
        class="jodit-status-bar"
      >
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <span>
            Chars: 0
          </span>
        </div>
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <span>
            Words: 0
          </span>
        </div>
        <div
          class="jodit-status-bar__item"
        />
        <div
          class="jodit-status-bar__item"
        >
          <div
            class="jodit-xpath"
            role="list"
          >
            <span
              aria-label="Select all"
              class="jodit-toolbar-button jodit-toolbar-button_variant_initial jodit-toolbar-button_selectall jodit-toolbar-button_size_tiny"
              data-ref="selectall"
              ref="selectall"
              role="listitem"
            >
              <button
                aria-label="Select all"
                aria-pressed="false"
                class="jodit-toolbar-button__button"
                role="button"
                tabindex="-1"
                type="button"
              >
                <span
                  class="jodit-toolbar-button__icon"
                >
                  <svg
                    class="jodit-icon_select_all jodit-icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="M3 6V3h3m4 0h4m4 0h3v3m0 4v4m0 4v3h-3m-4 0h-4m-4 0H3v-3m0-4v-4"
                      />
                      <rect
                        height="10"
                        rx="1"
                        width="10"
                        x="7"
                        y="7"
                      />
                       
                    </g>
                     
                  </svg>
                </span>
                <span
                  class="jodit-toolbar-button__text"
                />
              </button>
            </span>
            ﻿
          </div>
        </div>
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <a
            class="jodit-status-bar-link"
            href="https://xdsoft.net/jodit/"
            style="text-transform: uppercase"
            tabindex="-1"
            target="_blank"
          >
            
							Powered by Jodit
						
          </a>
        </div>
      </div>
    </div>
    <textarea
      style="display: none;"
    >
      &lt;p&gt;Hello, world!&lt;/p&gt;
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`Smoke Test > should render without crashing 1`] = `
<DocumentFragment>
  <div
    class="jodit-react-container"
  >
    <div
      class="jodit-container jodit jodit_theme_default jodit-wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; --jd-jodit-workplace-height: auto; width: auto;"
    >
      <div
        class="jodit-jodit__workplace-slot_above_true"
        contenteditable="false"
        data-jodit-above-toolbar=""
      />
      <div
        class="jodit-toolbar__box"
      >
        <div
          class="jodit-toolbar-editor-collection jodit-toolbar-editor-collection_mode_horizontal jodit-toolbar-editor-collection_size_middle"
          role="toolbar"
        >
          <input
            disabled="true"
            name="jodit-toolbar-focus-helper_[id]"
            style="width: 0; height:0; position: absolute; visibility: hidden;"
            tab-index="-1"
          />
          <div
            class="jodit-ui-group jodit-ui-group_line_true jodit-ui-group_size_middle"
            role="group"
          >
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_font-style jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Bold"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_bold jodit-ui-group__bold"
                data-ref="bold"
                ref="bold"
                role="listitem"
              >
                <button
                  aria-label="Bold"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_bold jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.75"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M6 4h7a4 4 0 0 1 0 8H6V4Zm0 8h8a4 4 0 0 1 0 8H6v-8Z"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Italic"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_italic jodit-ui-group__italic"
                data-ref="italic"
                ref="italic"
                role="listitem"
              >
                <button
                  aria-label="Italic"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_italic jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M10 4h9M5 20h9M15 4 9 20"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Underline"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_underline jodit-ui-group__underline"
                data-ref="underline"
                ref="underline"
                role="listitem"
              >
                <button
                  aria-label="Underline"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_underline jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M6 3v8a6 6 0 0 0 12 0V3M4 21h16"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Strike through"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_strikethrough jodit-ui-group__strikethrough"
                data-ref="strikethrough"
                ref="strikethrough"
                role="listitem"
              >
                <button
                  aria-label="Strike through"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_strikethrough jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M17 6c-1-1.5-2.5-2-5-2-3 0-5 1.5-5 4 0 1.8 1.5 3 5 4s5 2.2 5 4c0 2.5-2 4-5 4-2.5 0-4-.5-5-2M3 12h18"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
              <span
                aria-label="Clear Formatting"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_eraser jodit-ui-group__eraser"
                data-ref="eraser"
                ref="eraser"
                role="listitem"
              >
                <button
                  aria-label="Clear Formatting"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_eraser jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="m4 12 10-9 7 7-10 10H7l-4-4a3 3 0 0 1 1-4Zm3-3 8 7m-4 4h10"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
            </div>
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_list jodit-ui-group_before-spacer_true jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Insert Unordered List"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_ul jodit-toolbar-button_with-trigger_true jodit-ui-group__ul"
                data-ref="ul"
                ref="ul"
                role="listitem"
              >
                <button
                  aria-label="Insert Unordered List"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_ul jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M9.3333 5.3333h12M9.3333 12h12M9.3333 18.6667h12"
                          stroke-linecap="butt"
                          stroke-width="2.6667"
                        />
                        <path
                          d="M4 5.3333h0M4 12h0M4 18.6667h0"
                          stroke-width="3.2"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Insert Unordered List"
                  class="jodit-toolbar-button__trigger"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Insert Ordered List"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_ol jodit-toolbar-button_with-trigger_true jodit-ui-group__ol"
                data-ref="ol"
                ref="ol"
                role="listitem"
              >
                <button
                  aria-label="Insert Ordered List"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_ol jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M10.6667 6.6667h10.6666M10.6667 17.3333h10.6666"
                          stroke-linecap="butt"
                          stroke-width="2.6667"
                        />
                        <path
                          d="m2.5 5 2.5-2v7M2.5 10h5M2.5 16a2.5 2.5 0 0 1 5 0c0 1.5-1.5 2.5-5 5h5"
                          stroke-width="2"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Insert Ordered List"
                  class="jodit-toolbar-button__trigger"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-spacer"
            />
            <div
              class="jodit-ui-group jodit-ui-group_size_middle"
              role="list"
            />
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_font jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Font family"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_font jodit-toolbar-button_with-trigger_true jodit-ui-group__font"
                data-ref="font"
                ref="font"
                role="listitem"
              >
                <button
                  aria-label="Font family"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_font jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="m5 17 7-14 7 14M8 12h8M3 21h18"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Font family"
                  class="jodit-toolbar-button__trigger"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Font size"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_fontsize jodit-toolbar-button_with-trigger_true jodit-ui-group__fontsize"
                data-ref="fontsize"
                ref="fontsize"
                role="listitem"
              >
                <button
                  aria-label="Font size"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_fontsize jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M2 5h9M6.5 5v15M4 20h5M19 4v16m-3-13 3-3 3 3m-6 10 3 3 3-3"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Font size"
                  class="jodit-toolbar-button__trigger"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Insert format block"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_paragraph jodit-toolbar-button_with-trigger_true jodit-ui-group__paragraph"
                data-ref="paragraph"
                ref="paragraph"
                role="listitem"
              >
                <button
                  aria-label="Insert format block"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_paragraph jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M20 4H9a5 5 0 0 0 0 10h3M12 4v17M18 4v17"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Insert format block"
                  class="jodit-toolbar-button__trigger"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
              <span
                aria-label="Line height"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_lineHeight jodit-toolbar-button_with-trigger_true jodit-ui-group__lineHeight"
                data-ref="lineHeight"
                ref="lineHeight"
                role="listitem"
              >
                <button
                  aria-label="Line height"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_lineHeight jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M2.6667 5.3333h9.3333M2.6667 12H12M2.6667 18.6667h9.3333"
                          stroke-linecap="butt"
                          stroke-width="2.6667"
                        />
                        <path
                          d="M18 4v16m-3-13 3-3 3 3m-6 10 3 3 3-3"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Line height"
                  class="jodit-toolbar-button__trigger"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-group jodit-ui-group_separated_true jodit-ui-group_group_color jodit-ui-group_before-spacer_true jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Fill color or set the text color"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_brush jodit-toolbar-button_with-trigger_true jodit-ui-group__brush"
                data-ref="brush"
                ref="brush"
                role="listitem"
              >
                <button
                  aria-label="Fill color or set the text color"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_brush jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <path
                          d="M12 3c-2 3.2-5.5 7-5.5 10a5.5 5.5 0 0 0 11 0c0-3-3.5-6.8-5.5-10Z"
                        />
                         
                      </g>
                       
                      <rect
                        fill="inherit"
                        height="2"
                        rx="1"
                        stroke="none"
                        width="14"
                        x="5"
                        y="21"
                      />
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
                <span
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Fill color or set the text color"
                  class="jodit-toolbar-button__trigger"
                  role="button"
                  tabindex="-1"
                >
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="m4 8 8 8 8-8"
                      />
                       
                    </g>
                     
                  </svg>
                   
                </span>
              </span>
            </div>
            <div
              class="jodit-ui-spacer"
            />
            <div
              class="jodit-ui-group jodit-ui-group_size_middle"
              role="list"
            >
              <span
                aria-label="Show all"
                class="jodit-toolbar-button jodit-toolbar-button_size_middle jodit-toolbar-button_variant_initial jodit-toolbar-button_dots jodit-ui-group__dots"
                data-ref="dots"
                ref="dots"
                role="listitem"
              >
                <button
                  aria-label="Show all"
                  aria-pressed="false"
                  class="jodit-toolbar-button__button"
                  role="button"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="jodit-toolbar-button__icon"
                  >
                    <svg
                      class="jodit-icon_dots jodit-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                       
                      <g
                        fill="none"
                      >
                         
                        <circle
                          cx="12"
                          cy="5"
                          r="1"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="1"
                        />
                        <circle
                          cx="12"
                          cy="19"
                          r="1"
                        />
                         
                      </g>
                       
                    </svg>
                  </span>
                  <span
                    class="jodit-toolbar-button__text"
                  />
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit-jodit__workplace-slot_top_true"
        contenteditable="false"
      />
      <div
        class="jodit-jodit__workplace-slot_center_true"
        contenteditable="false"
        style="min-height: 198px;"
      >
        <div
          class="jodit-jodit__workplace-slot_left_true"
          contenteditable="false"
        />
        <div
          class="jodit-workplace"
          contenteditable="false"
          style="min-height: 198px; height: auto;"
          tabindex="-1"
        >
          <div
            aria-disabled="false"
            class="jodit-wysiwyg"
            contenteditable="true"
            spellcheck="false"
            style="min-height: 198px;"
            tabindex="-1"
          >
            <p>
              Hello, world!
            </p>
          </div>
          <div
            class="jodit-source"
          >
            <textarea
              class="jodit-source__mirror"
              style="height: 0px; min-height: 198px;"
            />
          </div>
        </div>
        <div
          class="jodit-jodit__workplace-slot_right_true"
          contenteditable="false"
        />
      </div>
      <div
        class="jodit-jodit__workplace-slot_bottom_true"
        contenteditable="false"
      />
      <div
        class="jodit-status-bar"
      >
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <span>
            Chars: 0
          </span>
        </div>
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <span>
            Words: 0
          </span>
        </div>
        <div
          class="jodit-status-bar__item"
        />
        <div
          class="jodit-status-bar__item"
        >
          <div
            class="jodit-xpath"
            role="list"
          >
            <span
              aria-label="Select all"
              class="jodit-toolbar-button jodit-toolbar-button_variant_initial jodit-toolbar-button_selectall jodit-toolbar-button_size_tiny"
              data-ref="selectall"
              ref="selectall"
              role="listitem"
            >
              <button
                aria-label="Select all"
                aria-pressed="false"
                class="jodit-toolbar-button__button"
                role="button"
                tabindex="-1"
                type="button"
              >
                <span
                  class="jodit-toolbar-button__icon"
                >
                  <svg
                    class="jodit-icon_select_all jodit-icon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                     
                    <g
                      fill="none"
                    >
                       
                      <path
                        d="M3 6V3h3m4 0h4m4 0h3v3m0 4v4m0 4v3h-3m-4 0h-4m-4 0H3v-3m0-4v-4"
                      />
                      <rect
                        height="10"
                        rx="1"
                        width="10"
                        x="7"
                        y="7"
                      />
                       
                    </g>
                     
                  </svg>
                </span>
                <span
                  class="jodit-toolbar-button__text"
                />
              </button>
            </span>
            ﻿
          </div>
        </div>
        <div
          class="jodit-status-bar__item jodit-status-bar__item-right"
        >
          <a
            class="jodit-status-bar-link"
            href="https://xdsoft.net/jodit/"
            style="text-transform: uppercase"
            tabindex="-1"
            target="_blank"
          >
            
							Powered by Jodit
						
          </a>
        </div>
      </div>
    </div>
    <textarea
      style="display: none;"
    >
      &lt;p&gt;Hello, world!&lt;/p&gt;
    </textarea>
  </div>
</DocumentFragment>
`;
